--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docx": "^7.3.0",
     "equal-vue": "^0.79.3",
     "file-saver": "^2.0.5",
+    "react": "^18.2.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
