--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "read-text-file": "^1.1.0",
     "txt": "^1.0.0",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.16",
-    "write": "^2.0.0",
-    "write-to-file": "^1.0.2",
-    "writefile": "^0.2.8"
+    "vue-excel-xlsx": "^1.2.2",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
